--- a/src/week4/package.xml
+++ b/src/week4/package.xml
@@ -13,7 +13,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-
+  <exec_depend>fanuc_cr7ia_moveit_config</exec_depend>
+  <exec_depend>moveit_config_utils</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
