--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "lcas-ros2-teaching-humble",
+	"name": "lcas-ros2-teaching-tiago",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "lcas.lincoln.ac.uk/lcas/devcontainer/ros2-teaching:2324-devel",
+	"image": "ros:foxy-ros1-bridge",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/desktop-lite:1": {}
@@ -22,10 +22,16 @@
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "bash .devcontainer/run.sh",
-	"containerUser": "lcas",
+	// "containerUser": "lcas",
 	// Configure tool-specific properties.
 	// "customizations": {},
-	"runArgs": [ "--security-opt", "seccomp=unconfined", "--cap-add=NET_ADMIN" ],
+	"runArgs": [
+		"--network=host",
+		"--security-opt",
+		"seccomp=unconfined",
+		"--cap-add=NET_ADMIN"
+		// "--env-file", "${localWorkspaceFolder}/.devcontainer/.env"
+	],
 
 	"containerEnv": {
         "ROS_LOCALHOST_ONLY": "0",
