--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,10 +3,14 @@
 {
 	"name": "lcas-ros2-teaching-tiago",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "ros:foxy-ros1-bridge",
+	// "image": "ros:foxy-ros1-bridge",
+	"build": {
+		"dockerfile": "Dockerfile",
+		"context": "."
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/desktop-lite:1": {}
+		"ghcr.io/devcontainers/features/desktop-lite:1": { }
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -22,14 +26,15 @@
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "bash .devcontainer/run.sh",
-	// "containerUser": "lcas",
+	"containerUser": "lcas",
 	// Configure tool-specific properties.
 	// "customizations": {},
 	"runArgs": [
-		"--network=host",
+		// "--network=host",
 		"--security-opt",
 		"seccomp=unconfined",
-		"--cap-add=NET_ADMIN"
+		"--cap-add=NET_ADMIN",
+		"--shm-size=1g"
 		// "--env-file", "${localWorkspaceFolder}/.devcontainer/.env"
 	],
 
