viz and control scripts

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 	// Configure tool-specific properties.
 	// "customizations": {},
 	"runArgs": [
-		// "--network=host",
+		"--network=host",
 		"--security-opt",
 		"seccomp=unconfined",
 		"--cap-add=NET_ADMIN",
