--- a/.devcontainer/gazebo/devcontainer.json
+++ b/.devcontainer/gazebo/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "lcas-ros2-teaching-tiago-control",
+	"name": "lcas-ros2-teaching-tiago-gazebo",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// "image": "ros:foxy-ros1-bridge",
 	"build": {
@@ -25,12 +25,12 @@
 	  }
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "bash .devcontainer/control/run.sh",
+	"postCreateCommand": "bash .devcontainer/gazebo/run.sh",
 	"containerUser": "lcas",
 	// Configure tool-specific properties.
 	// "customizations": {},
 	"runArgs": [
-		"--network=host",
+		// "--network=host",
 		"--security-opt",
 		"seccomp=unconfined",
 		"--cap-add=NET_ADMIN",
