--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,11 +3,11 @@
 {
 	"name": "lcas-ros2-rbt1001-humble",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	// "image": "lcas.lincoln.ac.uk/lcas/devcontainer/ros2-teaching-rbt1001:latest",
-	"build": {
-		"dockerfile": "../.docker/Dockerfile",
-		"context": "."
-	},
+	"image": "lcas.lincoln.ac.uk/lcas/devcontainer/ros2-teaching-rbt1001:latest",
+	//"build": {
+	//	"dockerfile": "../.docker/Dockerfile",
+	//	"context": "."
+	//},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/desktop-lite:1": {}
