--- a/src/mecharm_moveit_config/config/ros2_controllers.yaml
+++ b/src/mecharm_moveit_config/config/ros2_controllers.yaml
@@ -21,6 +21,7 @@ mecharm_controller:
       - joint6_to_joint5
     command_interfaces:
       - position
+      - velocity
     state_interfaces:
       - position
       - velocity
