updates to models

--- a/src/mecharm_moveit_config/config/ros2_controllers.yaml
+++ b/src/mecharm_moveit_config/config/ros2_controllers.yaml
@@ -21,7 +21,22 @@ mecharm_controller:
       - joint6_to_joint5
     command_interfaces:
       - position
-      - velocity
+      # - velocity
     state_interfaces:
       - position
-      - velocity
+      # - velocity
+    
+    allow_partial_joints_goal: true
+    
+    # If true, When set to true, the controller will not use any feedback from the system
+    # (e.g., joint positions, velocities, efforts) to compute the control commands.
+    open_loop_control: false
+
+    # When set to true, it allows the controller to integrate the trajectory goals it receives.
+    # This means that if the goal trajectory only specifies positions, the controller will
+    # numerically integrate the positions to compute the velocities and accelerations required
+    # to follow the trajectory.
+    allow_integration_in_goal_trajectories: true
+
+    # Allow non-zero velocity at the end of the trajectory
+    allow_nonzero_velocity_at_trajectory_end: true
